--- a/sass/site/header/_header-builder-main.scss
+++ b/sass/site/header/_header-builder-main.scss
@@ -351,7 +351,8 @@
 	}
 }
 .ast-desktop {
-    .main-header-menu > .menu-item > .sub-menu:before {
+	.main-header-menu > .menu-item .sub-menu:before,
+	.main-header-menu > .menu-item .astra-full-megamenu-wrapper:before {
 		position: absolute;
 		content: '';
 		top: 0;
